	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/matrix3x3.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/matrix4x4.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/matrix4x4.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/mesh.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/metadata.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/postprocess.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/quaternion.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/quaternion.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/scene.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/texture.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/types.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector2.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector2.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector3.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector3.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/version.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/lib/assimp_debug-dll_win32/assimpd.lib
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/lib/assimp_release-dll_win32/assimp.lib
	modified:   History.txt
