@@ -105,8 +105,8 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2015-12-22 17:51:44 L.9  '22096 T2867912659.K ~1082+----+----+----+----+----+
-     TimeCnt : //z 2015-12-22 17:50:11 L.9  '22189 T2867876620.K ~67  +----+----+----+----+----+
+     Zndex_E : //z 2015-12-23 16:56:30 L.8  '25410 T1644425715.K ~1086+----+----+----+----+----+
+     TimeCnt : //z 2015-12-23 16:55:56 L.8  '25444 T1644389850.K ~68  +----+----+----+----+----+
      Reg.Cnt : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44  +----+----+----+----+----+
      #44  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44    V+.1104 L+.1169 
      #43  R+ : //z 2015-12-11 17:20:18 L.20 '23982 T559072046 .K ~43    V+.1085 L+.1146 
@@ -156,7 +156,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-12-22 17:51:44 L.9  '22096 T2867912659.K ~1126  R+.42   L+.1157 --+----+
+     Version : //z 2015-12-23 16:56:30 L.8  '25410 T1644425715.K ~1130  R+.44   L+.1191 --+----+
      #59  V+ : //z 2015-12-22 17:50:39 L.9  '22161 T2867876694.K ~1121  R+.42   L+.1152 
      #58  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~1104  R+.44   L+.1170 V+.1104 
      #58  V+ : //z 2015-12-14 18:09:58 L.17 '21002 T2051895869.K ~1102  R+.43   L+.1159 
@@ -1184,4 +1184,9 @@ https://github.com/galek/ozz-animation.git
 todo http://blogs.msdn.com/b/chuckw/ 多看看该 blog 
 The Zombie DirectX SDK
 http://blogs.msdn.com/b/chuckw/archive/2015/03/23/the-zombie-directx-sdk.aspx
+
+//z 2015-12-23 16:55:56 L.8  '25444 T1644389850.K[T68,L1188,R44,V1127]
+世界空间，坐标转换
+http://www.codinglabs.net/article_world_view_projection_matrix.aspx
+http://www.cppblog.com/lovedday/archive/2008/05/02/48638.html
 #endregion //z 2015-12-15 17:48:47 L.16 '22273 BG57IV3@XCL T832936990 .K.F4146951713-+----+----+
